--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,10 @@
       "semi": ["error", "never"],
       "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx",".ts", "tsx"] }],
       "react/function-component-definition": [2, { "namedComponents": "arrow-function" }],
+      "react/jsx-props-no-spreading": [2, {
+        "html": "ignore",
+        "exceptions": ["Component"]
+    }],
       "no-undef": "off"
     }
 }
