--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "baseUrl": ".",
     "paths" : {
       "@components/*" : ["components/*"],
-      "@pages/*" : ["pages/*"]
+      "@pages/*" : ["pages/*"],
+      "@common/*" : ["components/common/*"],
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
@@ -20,6 +21,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "/**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
