--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.5.0",
-    "@heroicons/react": "^1.0.5",
+    "@headlessui/react": "1.5.0",
+    "@heroicons/react": "1.0.5",
+    "@types/js-cookie": "3.0.1",
+    "axios": "0.26.0",
+    "js-cookie": "3.0.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "3.0.23"
   },
   "devDependencies": {
     "@types/node": "17.0.18",
