--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,11 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths" : {
-      "@components/*" : ["components/*"],
-      "@pages/*" : ["pages/*"],
       "@common/*" : ["components/common/*"],
+      "@components/*" : ["components/*"],
+      "@hooks/*" : ["hooks/*"],
+      "@pages/*" : ["pages/*"],
+      "@services/*" : ["services/*"]
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
@@ -21,6 +23,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "/**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "/**/*.ts", "**/*.tsx", "hooks/useAuth.ts"],
   "exclude": ["node_modules"]
 }
