--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@heroicons/react": "1.0.5",
     "@types/js-cookie": "3.0.1",
     "axios": "0.26.0",
+    "chart.js": "3.7.1",
     "js-cookie": "3.0.1",
     "next": "12.1.0",
     "react": "17.0.2",
+    "react-chartjs-2": "4.0.1",
     "react-dom": "17.0.2",
     "tailwindcss": "3.0.23"
   },
